# hack_week

./: README.md  bayestofuture.ipynb  index.html  iris_eda.ipynb
.github/workflows/: node-hello.yml
bayes_to_future/: ReadMe.md  btf.ipynb  structure.json
blackbox/: app.py  index.html  readme.md
colab/: iris_eda.ipynb  readme.md
databaseforge/: conn.py  readme.md  store.db
dockerise/: Dockerfile  app.py  readme.md
markdown_to_html/: Readme.md  mark.md  markdown.html  markdown.py
project2/: index.html  readme.md  style.css
project3/: README.md  dice.py
project4/: index.html  readme.md  style.css
project5/: Readme.md  insta.py  instagram_data.txt
project6/: readme.md
project7/: README.md  cli.py
streamlit/: .env  .replit  app.py  config.toml  lyrics_fetcher.py  pyproject.toml  readme.md  wordcloud_generator.py
websafari/: readme.md  trending.py  trending_repos.csv
webtodolist/: index.html  script.js  style.css
