[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "requests>=2.32.4",
    "streamlit>=1.46.1",
    "wordcloud>=1.9.4",
]
